--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "5.0.4",
